Renamed asms to sasm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_FLAGS "-Wall -Wextra -std=c11 -Wswitch-enum -pedantic ${CMAKE_C_FLAGS}")
 
 add_executable(svm src/svm/svm.c)
-add_executable(asmsc src/asms/asmsc.c)
-add_executable(diasms src/diasms/diasms.c)
+add_executable(sasmc src/sasm/sasmc.c)
+add_executable(desasm src/desasm/desasm.c)
