--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_C_STANDARD 11)
 
 set(CMAKE_C_FLAGS "-Wall -Wextra -Wswitch-enum -Wmissing-prototypes -std=c11 -pedantic ${CMAKE_C_FLAGS}")
 
-add_executable(svm src/svm/svm.c)
+add_executable(mvm src/mvm/mvm.c)
 add_executable(masm src/masm/masm.c)
 add_executable(demasm src/demasm/demasm.c)
